# rapport-amiante

./: .env.example  .gitignore  pyproject.toml
.codex/environments/: environment-2.toml  environment.toml
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  columns.ts  index.css  logs.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs
app/src/catalog/: column_catalog.json
app/src/components/: ApiKeyModal.tsx  CustomizeColumnsPage.tsx  DetailPage.tsx  EditBuiltinColumnPage.tsx  ExportOptions.tsx  ResultModal.tsx  RetouchPage.tsx  RetouchSelectionPage.tsx
logs/backend/20260414/rag_20260414_150201/: BG-2502-1023-VSA-Appart_No111-Tour3_-_D2_-V1.rag.json
rapport_amiante/: __init__.py  catalog.py  logging_utils.py  main.py  models.py  paths.py
rapport_amiante/engine/: __init__.py  export.py  inference.py  llm_client.py  rag_debug.py  rag_extractor.py  rag_postprocess.py
rapport_amiante/variables/: __init__.py  prompt.py  var.py
tests/: test_catalog.py  test_column_catalog_and_export.py  test_rag_debug_trace.py  test_rag_extractor.py
