[project]
name = "rapport-amiante"
version = "0.2.0"
description = "Extraction automatique de diagnostics amiante depuis des PDFs"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- API Gemini (mode Gemini Flash + mode RAG post-traitement)
    "google-genai (>=1.66.0,<2.0.0)",
    # --- Modele de donnees
    "pydantic (>=2.12.5,<3.0.0)",
    # --- Export Excel
    "pandas (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    # --- Variables d environnement
    "python-dotenv (>=1.2.2,<2.0.0)",
    # --- Config YAML prestataires
    "pyyaml (>=6.0.3,<7.0.0)",
    # --- Mode RAG : extraction texte PDF
    "pdfplumber (>=0.11.9,<0.12.0)",
]

[tool.poetry]
packages = [{include = "rapport_amiante"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.5,<0.16.0)"
]

[project.scripts]
rapport-amiante = "rapport_amiante.main:main"
