[package]
name = "rapport-amiante"
version = "0.1.0"
description = "Application de traitement de rapports amiante"
authors = ["EsteLfo7"]
license = ""
repository = ""
default-run = "rapport-amiante"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-sidecar", "shell-execute", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-read-dir", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
