[package]
name = "rapport-amiante"
version = "0.1.0"
description = "Application de traitement de rapports amiante"
authors = ["EsteLfo7"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rapport_amiante_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
