[package]
name = "rapport-amiante"
version = "0.1.0"
description = "Application de traitement de rapports amiante"
authors = ["EsteLfo7"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] } 

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
